--- a/.github/workflows/daily-digest.yml
+++ b/.github/workflows/daily-digest.yml
@@ -1,28 +1,61 @@
-name: Daily Content Digest
+name: daily-digest
 on:
   schedule:
-    - cron: "0 14 * * *"
+    - cron: "15 13 * * *"   # 13:15 UTC = 08:15 America/Chicago
   workflow_dispatch:
 
 jobs:
-  run-digest:
+  digest:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      issues: write
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run digest
+      - name: Run summarizer
         env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}        # or leave blank for local/self-hosted with OPENAI_BASE_URL
+          OPENAI_BASE_URL: ${{ secrets.OPENAI_BASE_URL }}      # e.g., http://your-ollama:11434/v1
+          OPENAI_MODEL: ${{ vars.OPENAI_MODEL || 'gpt-4o-mini' }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
         run: |
           python -m src.main
+
+      - name: Commit report
+        run: |
+          if ! git diff --quiet; then
+            git config user.name "github-actions"
+            git config user.email "actions@users.noreply.github.com"
+            git add reports/*.md
+            git commit -m "Daily report $(date -u +%F)"
+            git push
+          fi
+
+      - name: Email the report
+        if: always()
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: ${{ secrets.SMTP_HOST }}
+          server_port: ${{ secrets.SMTP_PORT }}
+          secure: true
+          username: ${{ secrets.SMTP_USER }}
+          password: ${{ secrets.SMTP_PASS }}
+          subject: "Daily Content Report — ${{ github.repository }} — ${{ steps.date.outputs.today }}"
+          to: ${{ secrets.RECIPIENT_EMAIL }}
+          from: "Content Digest Bot <${{ secrets.SMTP_FROM }}>"
+          html_body: |
+            <p>Your daily report is ready.</p>
+            <p>Browse it in the repo: <a href="https://github.com/${{ github.repository }}/tree/main/reports">reports/</a></p>
+            <p>Latest file: <code>reports/${{ github.run_id }}</code> (timestamped in repo)</p>
