--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
-requests
-pydantic
+httpx==0.27.0
+python-dotenv==1.0.1
+pydantic==2.8.2
+beautifulsoup4==4.12.3
+trafilatura==1.12.1
+pypdf==4.3.1
+youtube-transcript-api==0.6.2
+yt-dlp==2024.08.06
+tiktoken==0.7.0
