--- a/.github/workflows/daily-digest.yml
+++ b/.github/workflows/daily-digest.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Run summarizer
         env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}        # or leave blank for local/self-hosted with OPENAI_BASE_URL
-          OPENAI_BASE_URL: ${{ secrets.OPENAI_BASE_URL }}      # e.g., http://your-ollama:11434/v1
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          OPENAI_BASE_URL: ${{ secrets.OPENAI_BASE_URL }}
           OPENAI_MODEL: ${{ vars.OPENAI_MODEL || 'gpt-4o-mini' }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
@@ -35,27 +35,35 @@ jobs:
 
       - name: Commit report
         run: |
-          if ! git diff --quiet; then
-            git config user.name "github-actions"
-            git config user.email "actions@users.noreply.github.com"
-            git add reports/*.md
+          git config user.name "github-actions"
+          git config user.email "actions@users.noreply.github.com"
+          # add whichever report format you generate:
+          git add reports/*.json || true
+          git add reports/*.md || true
+          if ! git diff --cached --quiet; then
             git commit -m "Daily report $(date -u +%F)"
             git push
           fi
+
+      - name: Set date
+        id: date
+        run: echo "today=$(date -u +%F)" >> $GITHUB_OUTPUT
 
       - name: Email the report
         if: always()
         uses: dawidd6/action-send-mail@v3
         with:
-          server_address: ${{ secrets.SMTP_HOST }}
-          server_port: ${{ secrets.SMTP_PORT }}
-          secure: true
-          username: ${{ secrets.SMTP_USER }}
-          password: ${{ secrets.SMTP_PASS }}
+          server_address: ${{ vars.SMTP_HOST }}   # e.g., smtp.office365.com
+          server_port: ${{ vars.SMTP_PORT }}     # e.g., 587
+          secure: false                          # 587 = STARTTLS, not implicit SSL
+          starttls: true
+          username: ${{ vars.SMTP_USER }}
+          password: ${{ secrets.SMTP_PASS }}     # keep password as a secret
           subject: "Daily Content Report — ${{ github.repository }} — ${{ steps.date.outputs.today }}"
-          to: ${{ secrets.RECIPIENT_EMAIL }}
-          from: "Content Digest Bot <${{ secrets.SMTP_FROM }}>"
+          to: ${{ vars.RECIPIENT_EMAIL }}        # ✅ repo variable
+          from: ${{ vars.SMTP_FROM }}            # should match/alias the SMTP account
           html_body: |
             <p>Your daily report is ready.</p>
             <p>Browse it in the repo: <a href="https://github.com/${{ github.repository }}/tree/main/reports">reports/</a></p>
-            <p>Latest file: <code>reports/${{ github.run_id }}</code> (timestamped in repo)</p>
+
+          
